// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiPaymentDetail should not render if not open 1`] = `<DocumentFragment />`;

exports[`MultiPaymentDetail should render a modal 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 wWqtC"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
              data-testid="TransactionSender"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-2"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionAmount"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Total Amount
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="Label-sc-4akkzw-0 cuqVRO"
                    color="danger"
                  >
                    <span
                      data-testid="AmountCrypto"
                    >
                      - 100 ARK
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-danger-100 text-theme-danger-500 dark:border-theme-danger-400 dark:text-theme-danger-400 ring-theme-background"
              >
                <div
                  class="sc-bdnxRM AFVmm"
                  height="16"
                  width="16"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionFee"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    data-testid="AmountCrypto"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionMemo"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Memo
                </div>
                <div
                  class="font-semibold"
                >
                  <p
                    class="break-all whitespace-pre-line"
                  >
                    Test
                  </p>
                </div>
              </div>
              <div
                class="flex justify-center w-11 text-theme-secondary-900 dark:text-theme-secondary-600"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    memo.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionTimestamp"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex space-x-3"
                  >
                    <span>
                      Not confirmed
                    </span>
                    <div
                      class="sc-bdnxRM NjstW text-theme-warning-600"
                      height="20"
                      width="20"
                    >
                      <svg>
                        status-pending.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-3"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <span
                            class="inline-flex overflow-hidden"
                          >
                            ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <span
                          class="align-middle"
                        >
                          <div
                            class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block pb-px text-sm"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              redirect.svg
                            </svg>
                          </div>
                        </span>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="relative focus:outline-none ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="sc-bdnxRM AFVmm"
                          height="16"
                          width="16"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiPaymentDetail should render with recipients 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-5lu2mc-0 wWqtC"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-o0fs2j-0 jWtMkt w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdnxRM AFVmm"
                height="16"
                width="16"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Transfer
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 guMZnB no-ligatures"
              data-testid="TransactionSender"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Sender
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                  >
                    <span
                      class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center -space-x-2"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionRecipients"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Recipients (3)
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="RecipientList__RecipientListWrapper-sc-16fvbk8-0 hRAnZw"
                  >
                    <div
                      class="Table__TableWrapper-sc-1gcp0fb-0 fDAVsO -mt-3"
                      role="table"
                    >
                      <table
                        cellpadding="0"
                        class="table-auto"
                      >
                        <thead>
                          <tr
                            class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
                            role="row"
                          >
                            <th
                              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                              colspan="1"
                              data-testid="table__th--0"
                              role="columnheader"
                            >
                              <div
                                class="flex flex-inline align-top hidden"
                              >
                                <div>
                                  Avatar
                                </div>
                              </div>
                            </th>
                            <th
                              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                              colspan="1"
                              data-testid="table__th--1"
                              role="columnheader"
                            >
                              <div
                                class="flex flex-inline align-top hidden"
                              >
                                <div>
                                  Address
                                </div>
                              </div>
                            </th>
                            <th
                              class="group relative text-sm text-left select-none text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                              colspan="1"
                              data-testid="table__th--2"
                              role="columnheader"
                            >
                              <div
                                class="flex flex-inline align-top hidden"
                              >
                                <div>
                                  Amount
                                </div>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          role="rowgroup"
                        >
                          <tr
                            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                            data-testid="recipient-list__recipient-list-item"
                          >
                            <td>
                              <div
                                class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                                >
                                  <img
                                    alt="adsad12312xsd1w312e1s13203e12"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(205, 220, 57)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/><circle r=\\"60\\" cx=\\"70\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"40\\" fill=\\"rgb(103, 58, 183)\\"/></svg>"
                                    title="adsad12312xsd1w312e1s13203e12"
                                  />
                                </div>
                              </div>
                            </td>
                            <td
                              class="flex-1 ml-4 w-28"
                            >
                              <div
                                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                              >
                                <span
                                  class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                                  data-testid="Address__address"
                                >
                                  adsad12312xsd1w312e1s13203e12
                                </span>
                              </div>
                            </td>
                            <td
                              class="flex-1 flex-shrink-0 pl-3 text-right"
                            >
                              <span
                                data-testid="AmountCrypto"
                              >
                                200 ARK
                              </span>
                            </td>
                          </tr>
                          <tr
                            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                            data-testid="recipient-list__recipient-list-item"
                          >
                            <td>
                              <div
                                class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                                >
                                  <img
                                    alt="adsad12312xsd1w312e1s13203e13"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"50\\" cx=\\"100\\" cy=\\"70\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"40\\" cy=\\"60\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                                    title="adsad12312xsd1w312e1s13203e13"
                                  />
                                </div>
                              </div>
                            </td>
                            <td
                              class="flex-1 ml-4 w-28"
                            >
                              <div
                                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                              >
                                <span
                                  class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                                  data-testid="Address__address"
                                >
                                  adsad12312xsd1w312e1s13203e13
                                </span>
                              </div>
                            </td>
                            <td
                              class="flex-1 flex-shrink-0 pl-3 text-right"
                            >
                              <span
                                data-testid="AmountCrypto"
                              >
                                1,990 ARK
                              </span>
                            </td>
                          </tr>
                          <tr
                            class="flex items-center py-4 border-b border-dashed last:border-b-0 border-theme-secondary-300 dark:border-theme-secondary-800"
                            data-testid="recipient-list__recipient-list-item"
                          >
                            <td>
                              <div
                                class="Avatar__AvatarWrapper-sc-18vw8a4-0 fuPYca flex-shrink-0"
                                data-testid="Avatar"
                              >
                                <div
                                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                                >
                                  <img
                                    alt="adsad12312xsd1w312e1s13203e14"
                                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"10\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(233, 30, 99)\\"/></svg>"
                                    title="adsad12312xsd1w312e1s13203e14"
                                  />
                                </div>
                              </div>
                            </td>
                            <td
                              class="flex-1 ml-4 w-28"
                            >
                              <div
                                class="flex overflow-hidden flex-grow items-center space-x-2 whitespace-nowrap no-ligatures"
                              >
                                <span
                                  class="inline-flex overflow-hidden text-theme-text font-semibold text-base"
                                  data-testid="Address__address"
                                >
                                  adsad12312xsd1w312e1s13203e14
                                </span>
                              </div>
                            </td>
                            <td
                              class="flex-1 flex-shrink-0 pl-3 text-right"
                            >
                              <span
                                data-testid="AmountCrypto"
                              >
                                1,990 ARK
                              </span>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionAmount"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Total Amount
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="Label-sc-4akkzw-0 cuqVRO"
                    color="danger"
                  >
                    <span
                      data-testid="AmountCrypto"
                    >
                      - 100 ARK
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-theme-danger-100 text-theme-danger-500 dark:border-theme-danger-400 dark:text-theme-danger-400 ring-theme-background"
              >
                <div
                  class="sc-bdnxRM AFVmm"
                  height="16"
                  width="16"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionFee"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Transaction Fee
                </div>
                <div
                  class="font-semibold"
                >
                  <span
                    data-testid="AmountCrypto"
                  >
                    21 ARK
                  </span>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionMemo"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Memo
                </div>
                <div
                  class="font-semibold"
                >
                  <p
                    class="break-all whitespace-pre-line"
                  >
                    Test
                  </p>
                </div>
              </div>
              <div
                class="flex justify-center w-11 text-theme-secondary-900 dark:text-theme-secondary-600"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  height="20"
                  width="20"
                >
                  <svg>
                    memo.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionTimestamp"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Timestamp
                </div>
                <div
                  class="font-semibold"
                >
                  31.07.2020 4:34 PM
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  Confirmations
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex space-x-3"
                  >
                    <span>
                      Well confirmed
                    </span>
                    <span>
                      <div
                        class="sc-bdnxRM NjstW text-theme-success-600"
                        height="20"
                        width="20"
                      >
                        <svg>
                          status-ok.svg
                        </svg>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="TransactionDetail__TransactionDetailStyled-sc-r7sfme-0 dEfDlX no-ligatures"
              data-testid="TransactionDetail"
            >
              <div
                class="flex-1 space-y-2 w-40 whitespace-nowrap"
              >
                <div
                  class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
                >
                  ID
                </div>
                <div
                  class="font-semibold"
                >
                  <div
                    class="flex overflow-hidden items-center space-x-3"
                  >
                    <span
                      class="overflow-hidden"
                    >
                      <a
                        class="Link__AnchorStyled-sc-ec014t-0 hokOwV group ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="#"
                        rel="noopener noreferrer"
                        to="https://explorer.ark.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                      >
                        <span
                          class="Link__Content-sc-ec014t-1 hUiuRR"
                        >
                          <span
                            class="inline-flex overflow-hidden"
                          >
                            ea63bf9a4b3eaf75a1dfff721967c45dce64eb7facf1aef29461868681b5c79b
                          </span>
                        </span>
                        <span
                          class="align-middle"
                        >
                          <div
                            class="sc-bdnxRM AFVmm flex-shrink-0 duration-200 inline-block pb-px text-sm"
                            data-testid="Link__external"
                            height="16"
                            width="16"
                          >
                            <svg>
                              redirect.svg
                            </svg>
                          </div>
                        </span>
                      </a>
                    </span>
                    <span
                      class="flex text-theme-primary-300 dark:text-theme-secondary-600"
                    >
                      <button
                        class="relative focus:outline-none ring-focus"
                        data-ring-focus-margin="-m-1"
                        data-testid="clipboard-icon__wrapper"
                        type="button"
                      >
                        <div
                          class="sc-bdnxRM AFVmm"
                          height="16"
                          width="16"
                        >
                          <svg>
                            copy.svg
                          </svg>
                        </div>
                      </button>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
